right bottom panel added